# seqax

./: .gitignore  env.py  input_loader.py  jax_extra.py  job.sh  prepare_data.py  prepare_data_job.sh  pyproject.toml  seqax_README.md  train.py  training_io.py  uv_job.sh
configs/: base.yaml  c4_a100x8_1b.yaml  c4_a100x8_2b.yaml  c4_a100x8_base.yaml  c4_a100x8x4_1b.yaml  c4_a100x8x4_2b.yaml  c4_a100x8x4_540m.yaml  flat_tokens_c4_a100x1_84m.yaml  flat_tokens_c4_h100x1_84m.yaml  huggingface_c4_a100x1_84m.yaml  local_test_synthetic.yaml  slurm_debug.yaml  synthetic_h100x4.yaml  synthetic_h100x4x2.yaml  synthetic_h100x4x8.yaml
configs/dataset/: c4_en.yaml  synthetic.yaml
configs/logger/: wandb.yaml
configs/model/: 1b.yaml  270m.yaml  2b.yaml  540m.yaml  84m.yaml
configs/training/: 185k.yaml  synthetic_quick.yaml
shardlib/: shardops.py  shardtypes.py
tools/: huggingface_to_flat_tokens.py  write_synthetic_dataset.py
tools/configs/: c4_en.yaml  synthetic_dataset.yaml  tinystories.yaml  wikitext_103.yaml
