[project]
name = "seqax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clearml>=1.17.1",
    "clearml-agent>=1.9.3",
    "datasets>=2.19.1",
    "einops>=0.8.1",
    "fsspec[gcs]>=2024.3.1",
    "hydra-core>=1.3.2",
    "jax[cuda12]>=0.5.0",
    "torch[cpu]>=2.6.0",
    "transformers>=4.48.3",
    "typeguard==4.1.5",
    "zarr>=3.0.3",
]

[tool.ruff]
ignore = ["F722"]
