[project]
name = "seqax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clearml>=1.17.1",
    "clearml-agent>=1.9.3",
    "datasets>=2.19.1",
    "einops>=0.8.1",
    "fsspec[gcs]>=2024.3.1",
    "hydra-core>=1.3.2",
    "jax[cuda12]==0.4.26",
    "submitit>=1.5.2",
    "torch>=2.6.0",
    "transformers>=4.48.3",
    "typeguard==4.1.5",
    "zarr>=3.0.3",
]


[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true


[tool.ruff.lint]
ignore = ["F722"]
